fixed scrolling issue on mobile with css

--- a/src/styles/components/map.css
+++ b/src/styles/components/map.css
@@ -1,9 +1,20 @@
 .map {
-  @apply fixed top-0 bottom-0 right-0 left-0;
-  @apply z-10;
+  @apply sticky top-0 bottom-0 right-0 left-0;
+  /* @apply z-10; */
+  /* touch-action: none; */
+  height: 70vh;
+  z-index: -10;
 
   & canvas {
-    @apply relative z-10;
+    /* @apply relative z-10; */
+    touch-action: none;
+  }
+}
+
+@media (min-width: 768px) {
+  .map {
+    @apply fixed top-0 bottom-0 right-0 left-0;
+    height: 100%;
   }
 }
 
